fix: comment text overflow

--- a/src/styles/components/comment/commentItem.module.scss
+++ b/src/styles/components/comment/commentItem.module.scss
@@ -54,6 +54,7 @@
         }
         .content {
             word-break: keep-all;
+            word-wrap: break-word;
         }
         
     }
